--- a/Frontend/src/translations/fi.json
+++ b/Frontend/src/translations/fi.json
@@ -136,7 +136,7 @@
       "fireplaceHeatStorage": "Varaavuus",
       "bakingOven": "Leivinuuni",
       "bakingOvenDetails": "Leivinuunin lisätiedot",
-      "otherInfo": "Muu tieto",
+      "otherInfoIndoor": "Muu tieto",
       "interestedIn": "Minua kiinnostaa",
       "interestedInOther": "Muu kiinnostava asia",
       "wantsInOffer": "Haluan, että tarjoukseen sisältyy",
@@ -144,7 +144,6 @@
       "personalStatus": "Olen",
       "additionalInfo": "Vapaamuotoisia lisätietoja",
       "technicalFeatures": "Talotekniikka",
-      "quote": "Tarjous",
       "customerStatus": "Asiakasstatus"
     },
     "options": {
@@ -164,11 +163,57 @@
       "privatePerson": "Yksityishenkilö",
       "company": "Yritys",
       "association": "Yhdistys",
-      "municipality": "Kunta"
+      "municipality": "Kunta",
+      "fieldRequired": "Pakollinen Kenttä",
+      "wood": "Puu",
+      "timber": "Hirsi",
+      "CLT": "CLT",
+      "concrete": "Betoni / Kivi",
+      "metalRoof": "Pelti / Saumakatto",
+      "brick": "Tiili",
+      "felt": "Huopa",
+
+      "parquet": "Parketti",
+      "laminate": "Laminaatti",
+      "vinyl": "Vinyyli",
+      "cork": "Korkki",
+      "tile": "Laatta",
+      "plasterBoard": "Kipsilevy",
+      "lightConcrete": "Kevytbetoni",
+      "woodPanel": "Puuverhous",
+    
+      "lead1": "Talopaketin harkinta (Ei rahoitusta)",
+      "lead2": "Etsin sopivaa talopakettia",
+      "lead3": "Kilpailutan talopaketteja (rahoitus on kunnossa)",
+
+
+      "airSourceHeatPump": "Ilmalämpöpumppu",
+      "geothermalHeat": "Maalämpö",
+      "electric": "Sähkö",
+      "oil": "Öljy",
+      "woodHeating": "Puulämmitys",
+      "districtHeating": "Kaukolämpö",
+
+      "minSize": "Min koko (m²)",
+      "maxSize": "Max koko (m²)",
+      "heatStoring": "Varaava",
+      "notHeatStoring": "Ei varaava"
     },
     "validation": {
       "required": "Pakollinen kenttä",
       "selectOne": "Valitse vähintään yksi"
+    },
+    "technicalOptions": {
+      "homeAutomation": "Taloautomaatio",
+      "solarElectricity": "Aurinkosähkö",
+      "evCharging": "Sähköauton latausasema",
+      "securitySystem": "Vartijajärjestelmä",
+      "other": "Muu"
+    },
+    "quoteOptions": {
+      "hvac": "LVI-työt",
+      "electrical": "Sähkötyöt",
+      "other": "Muu"
     }
   }
 } 
