--- a/Frontend/src/translations/en.json
+++ b/Frontend/src/translations/en.json
@@ -149,7 +149,8 @@
       "customerStatus": "Customer Status",
       "hasPlot": "Do you have a plot?",
       "directElectricHeating": "Direct Electric Heating",
-      "additionalInfo": "Additional Information"
+      "additionalInfo": "Additional Information",
+      "applicationName": "Application Title"
     },
     "options": {
       "yes": "Yes",
@@ -203,8 +204,42 @@
       "maxSize": "Max size (m²)",
       "heatStoring": "Heat Storing",
       "airCirculationFireplace": "Kiertoilmatakka",
-      "openFireplace": "Avotakka", 
-      "hasPlot": "Do you have a plot?"
+      "openFireplace": "Avotakka",
+      "hasPlot": "Do you have a plot?",
+      "heatingMethod": "Heating Method",
+      "heatingMethodOther": "Other Heating Method",
+      "kitchenType": "Kitchen",
+      "kitchenAccessories": "Kitchen Accessories",
+      "kiertoilmaTakka": "Air Circulation Fireplace",
+      "avotakka": "Open Fireplace",
+      "ownHouse": "Detached House",
+      "pairHouse": "Semi-detached House",
+      "leisureHouse": "Holiday Home",
+      "otherHouseType": "Other?",
+      "movingReady": "Move-in Ready",
+      "decorationReady": "Decoration Ready",
+      "basicPackage": "Basic Package",
+      "1-floor": "1 floor",
+      "1.5-floors": "1.5 floors",
+      "2-floors": "2 floors",
+      "3+-floor": "3+ floors",
+      "gableRoof": "Gable Roof",
+      "pulpitRoof": "Pulpit Roof",
+      "flatRoof": "Flat Roof",
+      "l-shape": "L-shaped house",
+      "i-shape": "I-shaped house",
+      "u-shape": "U-shaped house",
+      "hillsideHouse": "Hillside House",
+      "modern": "Modern",
+      "classic": "Classic",
+      "traditional": "Traditional",
+      "i-kitchen": "I-kitchen",
+      "u-kitchen": "U-kitchen",
+      "l-kitchen": "L-kitchen",
+      "openKitchenIsland": "Open kitchen with island",
+      "noKitchen": "I do not want a kitchen included in the offer",
+      "breakfastCabinet": "Breakfast Cabinet",
+      "stoneCountertops": "Stone Countertops"
     },
     "validation": {
       "required": "Required field",
